--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Messaging web interface",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm app,js"
   },
   "author": "nihar",
   "license": "ISC",
